# static

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  clang.bat  gramar.txt  project.vim  static.rdbg
.github/workflows/: cmake.yml
demo/: build.bat  site.txt
demo/posts/: Post-20200825-The Spanish Inquisition.html  Post-20220510-How to add new post.html  Post-20220811-Hot to create a Layout file.html  Post-20220818-Lorem Ipsum.html  Post-20220819-A dead parrot.html  Post-20220820-No Markup.html  Post-20230203-Markdown support.md  Post-20230203-NarkdownSupport.md  Post-20230916-The Ministry of Silly Walks.md
demo/themes/default/: about.html  index.html
demo/themes/default/assets/: default.css
demo/themes/default/include/: footer.html  header.html  top.html
demo/themes/default/layout/: post.html
src/: CMakeLists.txt  ast.c  ast.h  common.c  common.h  config.c  config.h  eval.c  eval.h  filesystem.c  filesystem.h  interpreter.c  interpreter.h  main.c  main.cpp  markdown.cpp  markdown.h  parser.c  parser.h  parser_utils.cpp  parser_utils.h  version.rc  version.rc.in
